(Almost) finish chapter 4 and fix source

--- a/Scriptie/tin-bachproef.bib
+++ b/Scriptie/tin-bachproef.bib
@@ -54,6 +54,13 @@
   year =      {2014}
 }
 
+@Misc{gartner2012,
+  author =       {Pettey, Christy and {van der Meulen}, Rob},
+  title =        {Gartner's 2012 Hype Cycle for Emerging Technologies Identifies "Tipping Point" Technologies That Will Unlock Long-Awaited Technology Scenarios},
+  howpublished = {Retrieved May 7, 2016, from \url{http://www.gartner.com/newsroom/id/2124315}},
+  year =         {2012}
+}
+
 @Misc{gartner2014,
   author =       {Rivera, Janessa and {van der Meulen}, Rob},
   title =        {Gartner's 2014 Hype Cycle for Emerging Technologies Maps the Journey to Digital Business},
@@ -181,7 +188,7 @@
 }
 
 @Misc{nokia2006,
-  author =       {Nokia},
+  author =       {{Nokia Corporation}},
   title =        {Nokia introduces Wibree technology as open industry initiative},
   howpublished = {Retrieved May 1, 2016, from \url{http://company.nokia.com/en/news/press-releases/2006/10/03/nokia-introduces-wibree-technology-as-open-industry-initiative}},
   year =         {2006}
@@ -237,6 +244,13 @@
   editor =    {Sawyer, Brian and Loukides, Mike},
   owner =     {Jan},
   timestamp = {2016.02.02}
+}
+
+@Book{waher2015learning,
+  title =     {Learning Internet of Things},
+  publisher = {Packt Publishing Ltd},
+  year =      {2015},
+  author =    {Waher, Peter}
 }
 
 @InProceedings{wang2015mole,
