Change small thing in concerns

--- a/Scriptie/tin-bachproef.tex
+++ b/Scriptie/tin-bachproef.tex
@@ -706,7 +706,7 @@ Two hackers have done something that might alarm even more people. They have suc
 
 Bluetooth Low Energy doesn't stay under the radar either, as it is increasingly gaining popularity and thus, gaining suspicion. With a cheap phone and a small application, it is possible to locate devices around the smartphone and see what they are. This can be an issue because burglars could simply walk around with this application installed and check which houses have a lot of technology worth stealing \citep{ashford2015}. China has even banned the use of internet-connected wearable technology as it could give the soldiers' position away during combat \citep{bbcnews2015}.
 
-Some students at the University of Illinois have also used the gyroscope and accelerometer of a smartwatch to detect what the user is typing on an ordinary or laptop keyboard \citep{wang2015mole}.
+Some students at the University of Illinois have also used the gyroscope and accelerometer of a smartwatch to detect what the user is typing on an ordinary or laptop keyboard \citep{wang2015mole}, something that could be both a privacy and security issue in the future.
 
 \section{Future work}
 \label{sec:futurework}
