Write conclusion chapter, still have to work in Peters' feedback

--- a/Scriptie/tin-bachproef.bib
+++ b/Scriptie/tin-bachproef.bib
@@ -262,6 +262,17 @@
   organization = {ACM}
 }
 
+@Article{wei2014wearables,
+  author =    {Wei, Jason},
+  title =     {How Wearables Intersect with the Cloud and the Internet of Things: Considerations for the developers of wearables.},
+  journal =   {Consumer Electronics Magazine, IEEE},
+  year =      {2014},
+  volume =    {3},
+  number =    {3},
+  pages =     {53--56},
+  publisher = {IEEE}
+}
+
 @Article{zheng2006toward,
   Title                    = {Toward secure low rate wireless personal area networks},
   Author                   = {Zheng, Jianliang and Lee, Myung J and Anshel, Michael},
